--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="./classes-objects/index.js"></script>
+    <script defer src="./loops/index.js"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <ul></ul>
 </body>
 </html>
